# echoframe

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
docs/: frontmatter-schema.md  getting-started.md  implementation-plan.md  index.md
scripts/: diagnose_audio.py  diagnose_loopback.py  diagnose_transcribe.py
src/echoframe/: __init__.py  ai_client.py  audio_utils.py  cli.py  config.py  diarizer.py  gui.py  logging_utils.py  models.py  recorder.py  renderer.py  session_io.py  storage.py  transcriber.py
tests/: test_config.py  test_recorder_devices.py  test_renderer.py  test_storage.py
